# Knowledge-Intelligence-System

./: LICENSE  pyproject.toml  requirements.txt
app/: config.py
app/services/: llm_service.py
